# AI-WeMedia

./: AI智能自媒体系统功能说明书.docx  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/v1/: accounts.py  ai_support.py  analytics.py  auth.py  content.py  distribution.py  interaction.py  monetization.py  router.py  topics.py  workflows.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  ai_service.py  analytics_service.py  auth_service.py  content_service.py  distribution_service.py  monetization_service.py
backend/app/tasks/: analytics_tasks.py  celery_app.py  content_tasks.py  notification_tasks.py  publish_tasks.py
backend/docker/: Dockerfile  docker-compose.yml
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_content.py  test_modules.py
docs/: product-design.md  tech-architecture.md
docs/modules/: 01-content-creation.md  02-data-monitoring.md  03-platform-distribution.md  04-monetization.md  05-intelligent-agent.md  06-content-workflow.md  07-operation-monitoring.md  08-data-analytics.md
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/layouts/: MainLayout.tsx
ui/src/pages/: AISupport.tsx  AnalyticsDashboard.tsx  ContentGeneration.tsx  ContentTopics.tsx  Dashboard.tsx  Distribution.tsx  Monetization.tsx  Monitor.tsx  PlaceholderPage.tsx  Settings.tsx  UserInteraction.tsx  UserProfiles.tsx
